* Make sure the tabs in the help section align properly. (Help template, help.css) [Bug 2698]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@7823 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/help.css
+++ b/Themes/default/css/help.css
@@ -88,3 +88,16 @@ ol.la
 	list-style-type: disc;
 	padding-left: 0.2em;
 }
+
+/* ...but leave the tab strips alone! */
+.buttonlist_bottom ul, .buttonlist ul
+{
+	margin: 0 !important;
+	padding: 0 0 0 1em !important;
+}
+
+.buttonlist_bottom ul li, .buttonlist ul li
+{
+	margin: 0 0.2em 0 0 !important;
+	padding: 0 !important; 
+}
